crates/ruff_python_parser/tests/snapshots/invalid_syntax@iter_unpack_yield_todo.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/iter_unpack_yield_todo.py
---
## AST

```
Module(
    ModModule {
        range: 0..165,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 139..164,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("i"),
                        range: 143..144,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 144..146,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 148..164,
                                value: Yield(
                                    ExprYield {
                                        range: 148..164,
                                        value: Some(
                                            Tuple(
                                                ExprTuple {
                                                    range: 154..164,
                                                    elts: [
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 154..155,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                        Starred(
                                                            ExprStarred {
                                                                range: 158..163,
                                                                value: Name(
                                                                    ExprName {
                                                                        range: 159..163,
                                                                        id: Name("rest"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: false,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # TODO(brent) this is accepted by 3.7 and 3.8 but not 3.13 (at least)
2 | # looks like a separate change from the tuple unpacking checked here
3 | def i(): yield 1, (*rest)
  |                    ^^^^^ Syntax Error: Starred expression cannot be used here
  |
